--- a/config.json
+++ b/config.json
@@ -16,6 +16,8 @@
     "In Britain, they sometimes call a fart a 'Trump'",
     "Although vegetarians may fart more, meat-eaters’ farts smell worse",
     "It's impossible to go through your life without farting",
-    "Farts can spell like roses or chocolate",
-    "The scientific term for a fart is 'flatulence'"]
+    "Farts can smell like roses or chocolate",
+    "The scientific term for a fart is 'flatulence'",
+    "Gum and soda can make you fart more",
+    "Farting means you're healthy!"]
 }
