Improve reply command and clean up bot

--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "prefix":"!",
     "token":"NzU4ODM5NjQ2NzkxNzk0Njk4.X20yfg.MRoJAraYBBkkVCI2UeVEAVe_HQI",
-    "fart_facts": ["Only 1% of your fart actually smells", 
+    "fart_facts": [
+    "Only 1% of your fart actually smells", 
     "Certain foods make your farts smell worse than others",
     "Women's farts smell worse than men's",
     "You probably don't fart as much as you think you do",
