Add kota command

--- a/config.json
+++ b/config.json
@@ -20,5 +20,6 @@
     "Farts can smell like roses or chocolate",
     "The scientific term for a fart is 'flatulence'",
     "Gum and soda can make you fart more",
-    "Farting means you're healthy!"]
+    "Farting means you're healthy!"],
+    "kota": "589554856898068480"
 }
