--- a/config.json
+++ b/config.json
@@ -1,25 +1,4 @@
 {
-    "prefix":"!",
-    "token":"NzU4ODM5NjQ2NzkxNzk0Njk4.X20yfg.MRoJAraYBBkkVCI2UeVEAVe_HQI",
-    "fart_facts": [
-    "Only 1% of your fart actually smells", 
-    "Certain foods make your farts smell worse than others",
-    "Women's farts smell worse than men's",
-    "You probably don't fart as much as you think you do",
-    "Most people fart about 14 to 22 times a day",
-    "Fart jokes are timeless",
-    "Farts *can* explode",
-    "Farts are really fast! Even faster than hoverboards",
-    "Vegetarians fart more than non-vegetarians",
-    "Your ass can tell the difference between a fart and doodoo",
-    "Holding in farts isn't bad",
-    "The world’s oldest joke is a fart joke",
-    "In Britain, they sometimes call a fart a 'Trump'",
-    "Although vegetarians may fart more, meat-eaters’ farts smell worse",
-    "It's impossible to go through your life without farting",
-    "Farts can smell like roses or chocolate",
-    "The scientific term for a fart is 'flatulence'",
-    "Gum and soda can make you fart more",
-    "Farting means you're healthy!"],
-    "kota": "589554856898068480"
+    "token": "NzczNzUwNzc1MzMxMTYwMDY0.X6NxkA.eyBSJafb7C2lZX6wxg9qRHBemqs",
+    "prefix": "!"
 }
