--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "tendoubot",
+  "name": "fartbot2000",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.3.1",
-    "eslint": "^7.10.0"
+    "discord.js": "^12.4.1"
   }
 }
