--- a/config.json
+++ b/config.json
@@ -1,4 +1,24 @@
 {
     "token": "NzczNzUwNzc1MzMxMTYwMDY0.X6NxkA.eyBSJafb7C2lZX6wxg9qRHBemqs",
-    "prefix": "!"
+    "prefix": "!",
+    "responses": ["It is certain.",
+        "It is decidedly so.",
+        "Without a doubt.",
+        "**Yes** – definitely.",
+        "You may rely on it.",
+        "As I see it, **yes.**",
+        "Most likely.",
+        "Outlook good.",
+        "**Yes.**",
+        "Signs point to **yes.**",
+        "Reply hazy, try again.",
+        "Ask again later.",
+        "Better not tell you now.",
+        "Cannot predict now.",
+        "Concentrate and ask again.",
+        "Don't count on it.",
+        "My reply is **no.**",
+        "My sources say **no.**",
+        "Outlook not so good.",
+        "Very doubtful."]
 }
