Implement client into execute functions

--- a/config.json
+++ b/config.json
@@ -20,5 +20,6 @@
         "My reply is **no.**",
         "My sources say **no.**",
         "Outlook not so good.",
-        "Very doubtful."]
+        "Very doubtful."],
+        "channel": "749084221024239717"
 }
