--- a/config.json
+++ b/config.json
@@ -20,6 +20,5 @@
         "My reply is **no.**",
         "My sources say **no.**",
         "Outlook not so good.",
-        "Very doubtful."],
-        "channel": "749084221024239717"
+        "Very doubtful."]
 }
