Create !fart command

--- a/config.json
+++ b/config.json
@@ -20,5 +20,7 @@
         "My reply is **no.**",
         "My sources say **no.**",
         "Outlook not so good.",
-        "Very doubtful."]
+        "Very doubtful."],
+        "farts": ["https://www.youtube.com/watch?v=hr7GyFM7pX4",
+            "https://www.youtube.com/watch?v=oVJAPAf7pKo"]
 }
