--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.4.1",
+    "eslint": "^7.17.0",
     "ytdl-core": "^4.4.1"
   }
 }
