--- a/config.json
+++ b/config.json
@@ -23,5 +23,11 @@
         "Very doubtful."],
         "farts": ["https://www.youtube.com/watch?v=hr7GyFM7pX4",
             "https://www.youtube.com/watch?v=oVJAPAf7pKo",
-            "https://www.youtube.com/watch?v=rPWDl5Zt_TQ"]
+            "https://www.youtube.com/watch?v=rPWDl5Zt_TQ"],
+        "playingStatus": ["FARTED??",
+            "look behind you 😈",
+            "with Chrollo's shit"],
+        "streamingStatus": ["Body - Megan Thee Stallion"],
+        "streamingStatusURLs": "https://www.youtube.com/watch?v=7PBYGu4Az8s",
+        "listeningStatus": ["you fart 😋"]
 }
