--- a/config.json
+++ b/config.json
@@ -26,8 +26,10 @@
             "https://www.youtube.com/watch?v=rPWDl5Zt_TQ"],
         "playingStatus": ["FARTED??",
             "look behind you 😈",
-            "with Chrollo's shit"],
+			"with Chrollo's shit",
+			"not dating Kamiele"],
         "streamingStatus": ["Body - Megan Thee Stallion"],
         "streamingStatusURLs": "https://www.youtube.com/watch?v=7PBYGu4Az8s",
-        "listeningStatus": ["you fart 😋"]
+		"listeningStatus": ["you fart 😋",
+			"Kamiele's cries for me"]
 }
