Improve presence system

--- a/config.json
+++ b/config.json
@@ -27,7 +27,8 @@
         "playingStatus": ["FARTED??",
             "look behind you 😈",
 			"with Chrollo's shit",
-			"not dating Kamiele"],
+			"not dating Kamiele",
+			"currently held hostage"],
         "streamingStatus": ["Body - Megan Thee Stallion"],
         "streamingStatusURLs": "https://www.youtube.com/watch?v=7PBYGu4Az8s",
 		"listeningStatus": ["you fart 😋",
