--- a/config.json
+++ b/config.json
@@ -28,7 +28,8 @@
             "look behind you 😈",
 			"with Chrollo's shit",
 			"not dating Kamiele",
-			"currently held hostage"],
+			"currently held hostage",
+			"eating canned corn rn"],
         "streamingStatus": ["Body - Megan Thee Stallion"],
         "streamingStatusURLs": "https://www.youtube.com/watch?v=7PBYGu4Az8s",
 		"listeningStatus": ["you fart 😋",
