--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "fartbot2000",
-  "version": "1.0.0",
-  "description": "",
+  "version": "8.6.3",
+  "description": "Discord.js bot for quan hitters",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Orion Ortiz",
+  "contributors": ["Kamiele White",
+	"Zoey Daniel",
+	"Kota Woods"],
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.5.1",
     "eslint": "^7.17.0",
-    "ytdl-core": "^4.4.3"
+	"ytdl-core": "^4.4.3"
+  },
+  "repository": {
+	  "type": "git",
+	  "url": "https://github.com/doesN0tComput3/FartBot2000.git"
   }
 }
