--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "token": "NzczNzUwNzc1MzMxMTYwMDY0.X6NxkA.eyBSJafb7C2lZX6wxg9qRHBemqs",
 	"prefix": "!",
-	"developing": true,
+	"developing": false,
     "responses": ["It is certain.",
         "It is decidedly so.",
         "Without a doubt.",
