--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Orion Ortiz",
-  "contributors": ["Kamiele White",
-	"Zoey Daniel",
-	"Kota Woods"],
+  "contributors": [
+    "Kamiele White",
+    "Zoey Daniel",
+    "Kota Woods"
+  ],
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.5.1",
     "eslint": "^7.17.0",
-	"ytdl-core": "^4.4.3"
+    "ytdl-core": "^4.4.5"
   },
   "repository": {
-	  "type": "git",
-	  "url": "https://github.com/doesN0tComput3/FartBot2000.git"
+    "type": "git",
+    "url": "https://github.com/doesN0tComput3/FartBot2000.git"
   }
 }
