--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	],
 	"dependencies": {
 		"@discordjs/opus": "^0.3.3",
+		"discord-reply": "^0.1.2",
 		"discord.js": "^12.5.1",
 		"eslint": "^7.23.0",
 		"ytdl-core": "^4.5.0"
