--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fartbot2000",
-	"version": "14.2.2",
+	"version": "14.3.0",
 	"description": "Discord.js bot for quan hitters",
 	"main": "index.js",
 	"scripts": {
@@ -18,6 +18,7 @@
 		"discord.js": "^12.5.1",
 		"eslint": "^7.23.0",
 		"mongoose": "^5.12.2",
+		"unscramble": "0.0.1-v",
 		"ytdl-core": "^4.5.0"
 	},
 	"repository": {
