--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"discord.js": "^12.5.1",
 		"dotenv": "^10.0.0",
 		"eslint": "^7.23.0",
+		"express": "^4.17.1",
+		"ffmpeg-static": "^4.3.0",
 		"mongoose": "^5.12.2",
 		"unscramble": "0.0.1-v",
 		"ytdl-core": "^4.5.0"
