--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"Kota Woods"
 	],
 	"dependencies": {
+		"@discordjs/builders": "^0.6.0",
 		"@discordjs/opus": "^0.3.3",
 		"discord-reply": "^0.1.2",
 		"discord.js": "^12.5.1",
