--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
 	"dependencies": {
 		"@discordjs/builders": "^0.6.0",
 		"@discordjs/opus": "^0.3.3",
+		"@discordjs/voice": "^0.6.0",
 		"discord-reply": "^0.1.2",
-		"discord.js": "^12.5.1",
+		"discord.js": "^12.5.3",
 		"dotenv": "^10.0.0",
 		"eslint": "^7.23.0",
 		"express": "^4.17.1",
